<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A0908"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="303dp"
        android:layout_height="132dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/logo_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_outline" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="152dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.28">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="88dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_toStartOf="@+id/textView"
            android:layout_toLeftOf="@+id/textView"
            android:contentDescription="@string/battery"
            app:srcCompat="@drawable/little_battery" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="138dp"
            android:layout_height="72dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-3dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:background="#FCBA04"
            android:gravity="center"
            android:textColor="#A50104"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="84dp"
            android:layout_height="73dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="1dp"
            android:layout_toStartOf="@+id/editTextNumber"
            android:layout_toLeftOf="@+id/editTextNumber"
            android:contentDescription="@string/target"
            app:srcCompat="@drawable/target" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="139dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginBottom="0dp"
            android:autofillHints=""
            android:background="#FCBA04"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter"
            android:inputType="number"
            android:textColor="#A50104"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="365dp"
        android:layout_height="108dp"
        android:layout_marginTop="380dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="66dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="72dp"
            android:layout_marginBottom="23dp"
            android:layout_toStartOf="@+id/button"
            android:layout_toLeftOf="@+id/button"
            android:background="#A50104"
            android:text="@string/start"
            android:textSize="18sp"
            app:rippleColor="#FFEB3B" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="66dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="25dp"
            android:background="#A50104"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="stopButton"
            android:text="@string/stop"
            android:textSize="18sp"
            app:elevation="0dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="267dp"
        android:layout_height="31dp"
        android:layout_marginBottom="172dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/your_device_ringtone_will_be_played"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.977" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="242dp"
        android:layout_height="99dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/battery_clock"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/battery_clock" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="89dp"
        android:layout_height="24dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/developer"
        android:gravity="center"
        android:text="@string/by_hari_dutt"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>